# Atoms

./: .travis.yml  CMakeLists.txt  README.md
examples/: .gitignore  Makefile  examples.sln
examples/avakar_packet/: .gitignore  CMakeLists.txt  Makefile  avakar_packet.vcxproj  avakar_packet.vcxproj.filters  main.cpp
examples/avakar_packet_Lorris-mobile/: CMakeLists.txt  main.cpp
examples/average/: CMakeLists.txt  Makefile  average.vcxproj  main.cpp
examples/delegate/: CMakeLists.txt  main.cpp
examples/fixedpoint_numbers/: CMakeLists.txt  Makefile  fixedpoint_numbers.vcxproj  main.cpp
examples/packet/: .gitignore  CMakeLists.txt  Makefile  main.cpp  packet.vcxproj  packet.vcxproj.filters
examples/tagged/: .gitignore  CMakeLists.txt  Makefile  main.cpp  tagged.vcxproj  tagged.vcxproj.filters
examples/value/: CMakeLists.txt  Makefile  main.cpp  value.vcxproj  value.vcxproj.filters
include/: atoms.h  utility.h  utility_static.h
include/atoms/: atoms.h  bit.h  communication.h  control.h  functional.h  numeric.h  type.h  utility_dynamic.h  utility_static.h
include/atoms/bit/: set_bits.h
include/atoms/communication/: avakar.h  packet.h
include/atoms/control/: pid.h
include/atoms/functional/: delegate.h  match.h
include/atoms/numeric/: classes.h  equality.h  fixed.h  matrix.h  naive_fixed_printer.h  rolling_average.h  value.h  vector.h
include/atoms/stdlib/: algorithm.h  type_traits.h
include/atoms/type/: function_trait.h  has_member.h  tagged.h  type_of_size.h
include/bit/: set_bits.h
include/communication/: avakar.h  packet.h
include/control/: pid.h
include/numeric/: fixed.h  value.h
include/stdlib/: algorithm.h  type_traits.h
include/type/: has_member.h  type_of_size.h
tests/: CMakeLists.txt  main.cpp
tests/bit/: set_bits.cpp
tests/communication/: avakar_packet.cpp
tests/functional/: match.cpp
tests/numeric/: vector.cpp
